[gd_scene load_steps=17 format=3 uid="uid://brsvelmtqdu08"]

[ext_resource type="Texture2D" uid="uid://4x4v25mpxcu1" path="res://textures/tilemap_nature.png" id="1_bdyha"]
[ext_resource type="Script" path="res://Scenes/Levels/Screens/Summary_Screen.gd" id="1_qk6u1"]
[ext_resource type="PackedScene" uid="uid://olunq2dnys21" path="res://Scenes/Levels/Screens/Cut_Out_Animation.tscn" id="2_tnbam"]
[ext_resource type="FontFile" uid="uid://ix5p8my5h1s5" path="res://textures/Fonts/upheavtt.ttf" id="3_iax0v"]
[ext_resource type="Texture2D" uid="uid://cfy4tne3ie57k" path="res://textures/rock.png" id="3_up6dc"]
[ext_resource type="PackedScene" uid="uid://bq4tubvsud5s7" path="res://Scenes/Levels/Screens/Texture_Button.tscn" id="4_o7gfg"]
[ext_resource type="AudioStream" uid="uid://p01iqgnex4l1" path="res://Sounds/blipSelect.wav" id="6_e1mvm"]
[ext_resource type="AudioStream" uid="uid://b2scdilkcbecu" path="res://Sounds/click.wav" id="8_r6vwe"]
[ext_resource type="AudioStream" uid="uid://cs1tr14c74y5i" path="res://Sounds/transition.wav" id="9_rab0l"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t3qyu"]
texture = ExtResource("1_bdyha")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rbo4f"]
texture = ExtResource("3_up6dc")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0

[sub_resource type="TileSet" id="TileSet_0ulys"]
tile_size = Vector2i(18, 18)
sources/0 = SubResource("TileSetAtlasSource_t3qyu")
sources/1 = SubResource("TileSetAtlasSource_rbo4f")

[sub_resource type="Animation" id="Animation_j0ruq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrontTiles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 500)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(127, 547)]
}

[sub_resource type="Animation" id="Animation_ke8bn"]
resource_name = "Show"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FrontTiles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.1),
"transitions": PackedFloat32Array(0.5, -2, 2),
"update": 0,
"values": [Vector2(2.08165e-12, 500), Vector2(2.08165e-12, -50), Vector2(2.08165e-12, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8, 1.1),
"transitions": PackedFloat32Array(0.5, -2, 2),
"update": 0,
"values": [Vector2(127, 547), Vector2(127, -3), Vector2(127, 57)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ciqts"]
_data = {
"RESET": SubResource("Animation_j0ruq"),
"Show": SubResource("Animation_ke8bn")
}

[sub_resource type="LabelSettings" id="LabelSettings_p2pkp"]
font = ExtResource("3_iax0v")
font_size = 36
outline_color = Color(0, 0, 0, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[node name="SummaryScreen" type="Control"]
process_mode = 2
process_priority = 1
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qk6u1")

[node name="CutOutAnimation" parent="." instance=ExtResource("2_tnbam")]
z_index = 2
custom_minimum_size = Vector2(500, 290)
layout_mode = 1
offset_right = 480.0
offset_bottom = 270.0

[node name="FrontTiles" type="TileMap" parent="."]
position = Vector2(2.08165e-12, 500)
tile_set = SubResource("TileSet_0ulys")
format = 2
layer_0/tile_data = PackedInt32Array(131081, 131072, 1, 131082, 131072, 1, 131083, 131072, 1, 131084, 131072, 1, 131085, 131072, 1, 131086, 131072, 1, 131087, 131072, 1, 131088, 131072, 1, 131089, 131072, 1, 131080, 131072, 1, 131090, 196608, 1, 131079, 65536, 1, 262163, 196608, 1, 327699, 196608, 6, 393235, 196608, 6, 458771, 196608, 6, 524307, 196608, 6, 589843, 196608, 6, 655379, 196608, 6, 720915, 196608, 7, 720914, 131072, 7, 720913, 131072, 7, 720912, 131072, 7, 720911, 131072, 7, 720910, 131072, 7, 720909, 131072, 7, 720908, 131072, 7, 720907, 131072, 7, 720906, 131072, 7, 720905, 131072, 7, 720904, 65536, 7, 655367, 65536, 7, 589831, 65536, 6, 524295, 65536, 6, 458759, 65536, 6, 393223, 65536, 6, 327687, 65536, 6, 262151, 65536, 6, 196615, 65536, 6, 196616, 131072, 6, 196617, 262144, 5, 262153, 262144, 5, 262154, 131072, 6, 262155, 262144, 5, 262156, 131072, 6, 262157, 131072, 6, 196621, 131072, 6, 196622, 131072, 6, 196623, 262144, 5, 196624, 131072, 6, 196625, 262144, 5, 196626, 196608, 6, 196620, 131072, 6, 196619, 131072, 6, 196618, 262144, 5, 262152, 131072, 6, 262158, 131072, 6, 262159, 131072, 6, 262160, 131072, 6, 262161, 131072, 6, 327697, 262144, 5, 327698, 262144, 5, 262162, 262144, 1, 327696, 131072, 6, 327695, 262144, 5, 327694, 131072, 6, 327693, 262144, 5, 327692, 262144, 5, 327691, 131072, 6, 327690, 262144, 5, 327689, 131072, 6, 393225, 262144, 5, 393224, 131072, 6, 327688, 262144, 5, 458760, 262144, 5, 458761, 262144, 5, 458762, 131072, 6, 393226, 262144, 5, 524297, 131072, 6, 524296, 131072, 6, 524298, 131072, 6, 589833, 458753, 6, 589832, 393217, 6, 655368, 393217, 8, 655369, 458753, 8, 655370, 458753, 8, 589834, 458753, 6, 458763, 262144, 5, 458764, 131072, 6, 524300, 262144, 5, 589836, 524289, 6, 589835, 458753, 6, 524299, 262144, 5, 393227, 262144, 5, 393228, 262144, 5, 393229, 131072, 6, 393230, 262144, 5, 393231, 262144, 5, 393232, 262144, 5, 393233, 262144, 5, 393234, 262144, 5, 458770, 262144, 5, 458769, 262144, 5, 458768, 131072, 6, 458767, 262144, 5, 458766, 262144, 5, 458765, 131072, 6, 524301, 131072, 6, 524302, 131072, 6, 524303, 131072, 6, 524304, 131072, 6, 524305, 262144, 5, 524306, 131072, 6, 589842, 524289, 6, 589841, 458753, 6, 589840, 458753, 6, 589839, 458753, 6, 589838, 393217, 6, 589837, 262144, 5, 655372, 524289, 8, 655371, 458753, 8, 655373, 262144, 5, 655374, 393217, 8, 655375, 458753, 8, 655376, 458753, 8, 655377, 458753, 8, 655378, 524289, 8, 65545, 65536, 1, 65546, 131072, 1, 65547, 131072, 1, 65548, 196608, 1, 65550, 262144, 6, 65554, 262144, 6, 10, 327680, 6)

[node name="NextLevel" type="VBoxContainer" parent="FrontTiles"]
offset_left = 144.0
offset_top = 162.0
offset_right = 234.0
offset_bottom = 198.0

[node name="Next_Level" parent="FrontTiles/NextLevel" instance=ExtResource("4_o7gfg")]
z_index = 1
layout_mode = 2
focus_neighbor_right = NodePath("../../MainMenu/Main_Menu")
stretch_mode = 5
text = "Next Level"

[node name="MainMenu" type="VBoxContainer" parent="FrontTiles"]
offset_left = 252.0
offset_top = 162.0
offset_right = 342.0
offset_bottom = 198.0

[node name="Main_Menu" parent="FrontTiles/MainMenu" instance=ExtResource("4_o7gfg")]
z_index = 1
layout_mode = 2
focus_neighbor_left = NodePath("../../NextLevel/Next_Level")
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ciqts")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = 547.0
offset_right = 361.0
offset_bottom = 727.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 70)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
text = "YOU WON!"
label_settings = SubResource("LabelSettings_p2pkp")

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_e1mvm")

[node name="ConfirmSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_r6vwe")

[node name="TransitionSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_rab0l")
volume_db = -5.0

[connection signal="animation_finished" from="CutOutAnimation/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="mouse_exited" from="FrontTiles/NextLevel/Next_Level" to="FrontTiles/NextLevel/Next_Level" method="_on_mouse_exited"]
[connection signal="pressed" from="FrontTiles/NextLevel/Next_Level" to="." method="_on_next_level_pressed"]
[connection signal="mouse_exited" from="FrontTiles/MainMenu/Main_Menu" to="FrontTiles/MainMenu/Main_Menu" method="_on_mouse_exited"]
[connection signal="pressed" from="FrontTiles/MainMenu/Main_Menu" to="." method="_on_main_menu_pressed"]

[editable path="CutOutAnimation"]
